--- a/data/config.json
+++ b/data/config.json
@@ -4,5 +4,6 @@
     "updateAtStart": true, 
     "allowManganatoScans": true,
     "allowReaperScans": false,
+    "allowReaperScansFake": true,
     "forceUpdateCurrentText": false
 }
